--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ pyasn1_modules==0.4.1
 PyDrive==1.3.1
 pyparsing==3.2.0
 python-dotenv==1.0.1
+pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
 requests-oauthlib==2.0.0
